Added property type filter and corrected sort by price by m2 and price per are
